Now in ProductNotFoundExceptionHandler is updated and will send url to the user